Code cleanup of UVLReader